//
//  AccessibilityIdentifier.swift
//  ImageFeed
//
//  Created by Pavel Seleznev on 3/17/25.
//

import Foundation

enum AccessibilityIdentifier: String {
    case loginButton = "Authenticate"
    case logoutButton = "logoutButton"
    case unsplashWebView = "UnsplashWebView"
}
