...
        logoutButton.accessibilityIdentifier = AccessibilityIdentifier.logoutButton.rawValue
        logoutButton.addTarget(self, action: #selector(Self.didTapLogoutButton), for: UIControl.Event.touchUpInside)
    }
    
    private func setupAlert() {
        let logoutAlert = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert)
        let yesAction = UIAlertAction(title: "Да", style: .default) {
            [weak self] _ in
            guard let self else { return }
            profileLogoutService.logout()
        }
        
        let noAction = UIAlertAction(title: "Нет", style: .default) {
...
