...
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="HHU-JE-e3a"/>
                                    <constraint firstAttribute="width" constant="48" id="i9g-f1-kYe"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Nav Back Button White"/>
                                <connections>
                                    <action selector="didTapBackButton" destination="rUd-jx-eIW" eventType="touchUpInside" id="f2X-is-CUZ"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="Wjc-c7-P4T"/>
...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Egd-4n-gNf" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="39e-Z2-a78"/>
                                                        <constraint firstAttribute="width" constant="44" id="JIY-51-zSX"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="Like Button off"/>
...
